--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     def nav_version = "2.3.5"
     def livedata_version = "2.4.0"
     def coroutines_version = "1.5.2"
+    def markwon_version = '4.6.2'
 
     // KTX
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -84,6 +85,16 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$livedata_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$livedata_version"
+
+    // Markwon { @link https://github.com/noties/Markwon }
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:editor:$markwon_version"
+    implementation "io.noties.markwon:ext-tables:$markwon_version"
+    implementation "io.noties.markwon:ext-tasklist:$markwon_version"
+    implementation "io.noties.markwon:html:$markwon_version"
+    implementation "io.noties.markwon:image:$markwon_version"
+    implementation "io.noties.markwon:linkify:$markwon_version"
+    implementation "com.caverock:androidsvg-aar:1.4"
 
     // Preferences
     implementation 'androidx.preference:preference-ktx:1.1.1'
