--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     implementation "io.noties.markwon:linkify:$markwon_version"
     implementation "com.caverock:androidsvg-aar:1.4"
 
+    // Scrolling indicator
+    implementation 'ru.tinkoff.scrollingpagerindicator:scrollingpagerindicator:1.2.1'
+
     // Preferences
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
